@@ -1,3 +1,6 @@
+Future version (tbd)
+ * Require only MODIFY permission on base when updating table with MV (STAR-564)
+
 4.0-rc2
  * cqlsh: fix DESC TYPE with non-ascii character in the identifier (CASSANDRA-16400)
  * Remove drivers dependency and bring cql_keywords_reserved on server side (CASSANDRA-16659)
